hphp/test/slow/reffy-warn.php.expectf

Fatal error: Parameter 1 on function alpha was declared inout but is not declared inout on parent function Foo::alpha in %s/reffy-warn.php on line 7
